# guapow

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  py_dist.sh  pyproject.toml  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
guapow/: __init__.py
guapow/cli/: args.py  command.py  main.py
guapow/common/: auth.py  class_util.py  config.py  dto.py  encoder.py  encryption.py  log.py  model.py  model_util.py  network.py  profile.py  scripts.py  steam.py  system.py  systemd.py  users.py  util.py
guapow/runner/: main.py  profile.py  settings.py  task.py
tests/: __init__.py  mocks.py
tests/common/: test_class_util.py  test_config.py  test_dto.py  test_model.py  test_model_util.py  test_profile.py  test_system.py  test_util.py
tests/resources/: gpu_invalid.profile  gpu_valid.profile  hide_mouse.profile  invalid_steam.profile  launchers_and_comments  lines_starting_with_sharps.profile  neg_nice.profile  nice_no_watch.profile  nice_watch.profile  no_profiles.map  only_after_scripts.profile  only_after_scripts_root.profile  only_before_scripts.profile  only_before_scripts_root.profile  only_compositor.profile  only_finish_scripts.profile  only_finish_scripts_root.profile  only_invalid_compositor.profile  only_launchers.profile  only_runner_env_vars.profile  only_skip_launcher_mapping.profile  only_stop_procs.profile  only_stop_procs_relaunch.profile  only_valid_cpu.profile  only_valid_io.profile  only_valid_process.profile  opt_allowed_users.conf  opt_check_finished_interval.conf  opt_children_found_timeout.conf  (+33 more)
(+83 files in other folders)
